syntax = "proto3";

option java_multiple_files = true;
option java_package = "si.mlimedija.proto";

package Master;

service master {

  rpc putData(PutDataRequest) returns (PutDataResponse);

  rpc getData(GetDataRequest) returns (GetDataResponse);

  rpc putFile(stream PutFileRequest) returns (PutFileResponse);

  rpc getFile(GetFileRequest) returns (stream GetFileResponse);
}

// put data to cache => request
message PutDataRequest {
  string key = 1;
  string value = 2;
}

// put data to cache => response
message PutDataResponse {
  string key = 1;
  int32 responseCode = 2;
  string responseMessage = 3;
}

// get data from cache => request
message GetDataRequest {
  string key = 1;
}

// get data from cache => response
message GetDataResponse {
  string key = 1;
  string value = 2;
  int32 responseCode = 3;
  string responseMessage = 4;
}

// put stream file to cache => request
message PutFileRequest {
  bytes content = 1;
  int32 chunkNumber = 2;
}

// put stream file to cache => response
message PutFileResponse {
  int32 responseCode = 1;
  string responseMessage = 2;
}

// get stream file from cache => request
message GetFileRequest {
  string fileName = 1;
}

// get stream file from cache => response
message GetFileResponse {
  bytes content = 1;
  int32 chunkNumber = 2;
}


